# atoll-digital-library

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README  README.md
cmake/: AtollConfig.hpp.cmake  Doxygen.cmake  FindBDB.cmake  FindCppUnit.cmake  FindICU.cmake  FindVld.cmake  FindXalan.cmake  FindXercesC.cmake  FindZLIB.cmake
data_unittest/: .gitignore  docbook_4-4.xml  docbook_4-5.xml  docbook_5.xml  docbook_atoll.css  docbook_xsl_test.bat  docbook_xsl_test.sh  docbook_xsl_test.xml  dublincore_indexer_config.xml  dublincore_recordbreaker_config.xml  dublincore_test.xml  indexer_config_test.xml  record_breaker_test.xml  recordbreaker_config_test.xml  tei_atoll.css  tei_xsl_test.bat  tei_xsl_test.sh  tei_xsl_test.xml  test_adorner.xml  test_adorner_handler.xml  test_bal_0167.fwb  test_namespace_multi.xml  test_record_breaker_00.xml  test_record_breaker_01.xml  test_record_breaker_02.xml  test_record_breaker_03.xml  test_record_breaker_04.xml  test_record_breaker_05.xml  test_record_breaker_06.xml  test_xhtml.xhtml  test_xhtml_sample.xhtml  unittest.bat  utf8_demo.xml  utf8_test.xml  xmlexec_req.bat  xmlexec_req.sh  xmlexec_req_01.xml  xmlexec_req_02.xml  xmlexec_req_03.xml  xmlexec_req_include.xml  (+12 more)
doc/: BerkeleyDBLicense.txt  ICULicense.txt
doc/doxygen/: Doxygen.cfg  Doxygen.cpp  DoxygenFooter.html  Wiki.cpp
dtd/: atoll_indexer_config.dtd  atoll_plugin_xmlexec.dtd  atoll_recordbreaker_config.dtd  dublin_core.dtd
src/: Portability.hpp
src/adorner/: Adorner.cpp  Adorner.hpp  AdornerConfig.cpp  AdornerConfig.hpp  AdornerDecorator.cpp  AdornerDecorator.hpp
src/collection/: ColManager.cpp  ColManager.hpp  Collection.cpp  Collection.hpp
src/common/: AppAssert.cpp  AppAssert.hpp  AppException.cpp  AppException.hpp  BinaryBuffer.cpp  BinaryBuffer.hpp  BufUtil.hpp  Containers.cpp  Containers.hpp  EnumString.hpp  FileSystem.cpp  FileSystem.hpp  FileSystemWin32.hpp  LibExport.hpp  Logger.cpp  Logger.hpp  Md5.cpp  Md5.hpp  ScopedPtr.hpp  SharedPtr.hpp  StdString.cpp  StdString.hpp  Trace.cpp  Trace.hpp  UnicodeUtil.cpp  UnicodeUtil.hpp  UnitTest.cpp  UnitTest.hpp  Util.cpp  Util.hpp  XercesBaseHandler.cpp  XercesBaseHandler.hpp  XercesCatalogResolver.cpp  XercesCatalogResolver.hpp  XercesEntityResolver.cpp  XercesEntityResolver.hpp  XercesNode.cpp  XercesNode.hpp  XercesParser.cpp  XercesParser.hpp  (+4 more)
src/console/: Main.cpp
src/database/: DbBlob.cpp  DbBlob.hpp  DbColMeta.cpp  DbColMeta.hpp  DbCursor.cpp  DbCursor.hpp  DbDoc.cpp  DbDoc.hpp  DbDocMeta.cpp  DbDocMeta.hpp  DbFieldMeta.cpp  DbFieldMeta.hpp  DbManager.cpp  DbManager.hpp  DbMap.cpp  DbMap.hpp  DbNdx.cpp  DbNdx.hpp  DbSearchRecord.cpp  DbSearchRecord.hpp  DbUtil.cpp  DbUtil.hpp  DbWrapper.cpp  DbWrapper.hpp
src/engine/: App.cpp  App.hpp  EngineApi.cpp  EngineApi.hpp  EngineEnv.cpp  EngineEnv.hpp  EngineLib.cpp  EngineLib.hpp  InitStringDecl.cpp  InitStringDecl.hpp
src/indexer/: Indexer.cpp  Indexer.hpp  IndexerConfig.cpp  IndexerConfig.hpp  IndexerConfigNode.cpp  IndexerConfigNode.hpp  IndexerConfigParam.cpp  IndexerConfigParam.hpp  IndexerItem.cpp  IndexerItem.hpp  IndexerNode.cpp  IndexerNode.hpp
src/lucene/: Lucene.hpp
src/parser/: AdornerHandler.cpp  AdornerHandler.hpp  IndexerConfigHandler.cpp  IndexerConfigHandler.hpp  IndexerHandler.cpp  IndexerHandler.hpp  Parser.cpp  Parser.hpp  RecordBreakerConfigHandler.cpp  RecordBreakerConfigHandler.hpp
src/plugin/: Plugin.cpp  Plugin.hpp  PluginKernel.cpp  PluginKernel.hpp  PluginMessage.cpp  PluginMessage.hpp  PluginServer.cpp  PluginServer.hpp
src/recordbreaker/: RecordBreaker.cpp  RecordBreaker.hpp  RecordBreakerConfig.cpp  RecordBreakerConfig.hpp  RecordBreakerConfigParam.cpp  RecordBreakerConfigParam.hpp
src/samples/berkeleydb/: CMakeLists.txt  berkeleydb.sln
src/samples/berkeleydb/DatabaseLoad/: .gitignore  DatabaseLoad.vcxproj  MyDb.cpp  MyDb.hpp  excxx_example_database_load.cpp  excxx_example_database_read.cpp  getopt.cpp  gettingStartedCommon.hpp
src/samples/cppunit/: CMakeLists.txt
src/samples/cppunit/ExampleTestCase/: ExampleTestCase.cpp  ExampleTestCase.hpp  Main.cpp
src/samples/icu/: CMakeLists.txt
src/samples/icu/Collation/: Collation.cpp
src/samples/plugin_architecture/: CMakeLists.txt
src/samples/plugin_architecture/doc/: PluginArchitecture.html
src/samples/plugin_architecture/myengine/: GraphicsServer.hpp  LibExport.hpp  Plugin.hpp  PluginKernel.cpp  PluginKernel.hpp  StorageServer.hpp
src/samples/plugin_architecture/opengl_plugin/: OpenglPlugin.cpp
src/samples/plugin_architecture/zip_plugin/: zip_plugin.cpp
src/samples/xerces/: CMakeLists.txt  xerces.sln
src/samples/xerces/SAX2Print/: SAX2FilterHandlers.cpp  SAX2Print.cpp  SAX2Print.hpp  SAX2Print.vcxproj  SAX2PrintHandlers.cpp  SAX2PrintHandlers.hpp
src/searcher/: QueryResolver.cpp  QueryResolver.hpp  Searcher.cpp  Searcher.hpp
src/tokenizer/: Token.cpp  Token.hpp
src/unittest/: AdornerDecoratorTest.cpp  AdornerDecoratorTest.hpp  AdornerHandlerTest.cpp  AdornerHandlerTest.hpp  AdornerTest.cpp  AdornerTest.hpp  BasicTest.cpp  BasicTest.hpp  ColManagerTest.cpp  ColManagerTest.hpp  ColMetaTest.cpp  ColMetaTest.hpp  CollectionTest.cpp  CollectionTest.hpp  DbBlobTest.cpp  DbBlobTest.hpp  DbColMetaTest.cpp  DbColMetaTest.hpp  DbDocMetaTest.cpp  DbDocMetaTest.hpp  DbDocTest.cpp  DbDocTest.hpp  DbFieldMetaTest.cpp  DbFieldMetaTest.hpp  DbManagerTest.cpp  DbManagerTest.hpp  DbMapTest.cpp  DbMapTest.hpp  DbNdxTest.cpp  DbNdxTest.hpp  DbSearchRecordTest.cpp  DbSearchRecordTest.hpp  DocMetaTest.cpp  DocMetaTest.hpp  DocRecordTest.cpp  DocRecordTest.hpp  EntryTest.cpp  EntryTest.hpp  EnumStringTest.cpp  EnumStringTest.hpp  (+32 more)
src/util/: ColMeta.cpp  ColMeta.hpp  DocMeta.cpp  DocMeta.hpp  DocRecord.cpp  DocRecord.hpp  Entry.cpp  Entry.hpp  FieldMeta.cpp  FieldMeta.hpp  SearchCrit.cpp  SearchCrit.hpp  SearchRecord.cpp  SearchRecord.hpp  WordEntries.cpp  (+5 more)
xsl/: cppunit_report.xsl  docbook_html.xsl  docbook_param.xsl  epub2html.bat  epub2html.xsl  highwords_param.xsl  identity_param.xsl  tei_html.xsl  tei_param.xsl  xslt_test.bat  xslt_test.html  xslt_test.xml  xslt_test.xsl
(+140 files in other folders)
